crates/core/tests/ui/derive/fail/tuple_struct.rs
#[derive(babar::Codec)]
struct Broken(#[allow(dead_code)] i32);

fn main() {}
